--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ Project Initiation Document/Project Initiation Document\.log
 Project Initiation Document/Project Initiation Document\.synctex\.gz
 
 Project Initiation Document/Project Initiation Document\.toc
+
+Requirements Specification document\.toc
+
+Requirements Specification document\.synctex\.gz
+
+Requirements Specification document\.log
+
+Requirements Specification document\.fls
+
+Requirements Specification document\.fdb_latexmk
+
+Requirements Specification document\.aux
