Ignore .div files
Added dvi files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Requirements Specification document\.fls
 Requirements Specification document\.fdb_latexmk
 
 Requirements Specification document\.aux
+
+Requirements Specification document/Requirements Specification document\.dvi
