Removed Automatic generated LaTex files

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ Requirements Specification document\.fdb_latexmk
 Requirements Specification document\.aux
 
 Requirements Specification document/Requirements Specification document\.dvi
+
+Design Analysis & dummy P\.o\.C/Design Analysis\.aux
+
+Design Analysis & dummy P\.o\.C/Design Analysis\.log
+
+Design Analysis & dummy P\.o\.C/Design Analysis\.synctex\.gz
+
+Design Analysis & dummy P\.o\.C/Design Analysis\.toc
