Ignore not required files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ Design Analysis & dummy P\.o\.C/Design Analysis\.log
 Design Analysis & dummy P\.o\.C/Design Analysis\.synctex\.gz
 
 Design Analysis & dummy P\.o\.C/Design Analysis\.toc
+
+Design Analysis & dummy P\.o\.C/Design Analysis\.fls
+
+Design Analysis & dummy P\.o\.C/Design Analysis\.fdb_latexmk
